tests/neg/i12462.scala
class B(x: Int) {
  self: Int =>
  def this(a: String) = this() // error
}
